test/Fail/NoPrivateConstructorsInPublicData.err
NoPrivateConstructorsInPublicData.agda:4.3-5.10: error: [Syntax.WrongContentBlock]
A data definition can only contain type signatures, possibly under
keyword instance
